# HOSCF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  als.cpp  main.cpp  make.sh  rank-one.cpp  scf_3_dim.cpp  scf_4_dim.cpp  scf_5_dim.cpp  scf_6_dim.cpp
als/: CMakeLists.txt  als.cpp
include/: common.h  offload_task.h  scf.h  tensor.h  utils.h
src/: CMakeLists.txt  common.cpp  offload_task.cpp  scf.cpp  tensor.cpp  utils.cpp
src/ttvc/: CMakeLists.txt  main.cpp
src/ttvc/bench/: a.out  test.cpp
src/ttvc/include/: common.h  tensor.h  ttvc.h  utils.h
src/ttvc/src/: CMakeLists.txt  ttvc.cpp
src/ttvc/test/: test_ttvc.cpp
tests/: CMakeLists.txt  svd_tests.cpp
ttvc/: CMakeLists.txt  main.cpp
ttvc/bench/: a.out  test.cpp
ttvc/include/: common.h  tensor.h  ttvc.h  utils.h
ttvc/src/: CMakeLists.txt  common.cpp  tensor.cpp  ttvc.cpp  utils.cpp
ttvc/test/: CMakeLists.txt
